Add null support for and, or and xor operators